kubernetes/apps/external/proxmox/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8006
