kubernetes/apps/external/proxmox/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: external
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: proxmox.png
    gethomepage.dev/name: Proxmox
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/href: https://proxmox.${SECRET_DOMAIN}
    gethomepage.dev/widget.type: proxmox
    gethomepage.dev/widget.url: http://${PROXMOX_IP}:8006
    gethomepage.dev/widget.username: ${SECRET_PROXMOX_USERNAME}
    gethomepage.dev/widget.password: ${SECRET_PROXMOX_TOKEN}
    hajimari.io/icon: mdi:proxmox
    hajimari.io/enable: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "proxmox.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: proxmox
                port:
                  number: 8006
  tls:
    - hosts:
        - *host

---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: external
subsets:
  - addresses:
      - ip: ${PROXMOX_IP}
    ports:
      - name: http
        port: 8006
        protocol: TCP
